# octopus

./: .gitignore  ARTEFACTS.md  LICENSE  README.md  pyproject.toml
data/activations/: sae_layer12_bootstrap.json  sae_layer12_interpretations.md  sae_layer12_top_features.json  sae_layer16_bootstrap.json  sae_layer16_interpretations.md  sae_layer16_top_features.json  sae_layer20_bootstrap.json  sae_layer20_interpretations.md  sae_layer20_permutation.json  sae_layer20_top_features.json  sae_layer24_bootstrap.json  sae_layer24_interpretations.md  sae_layer24_top_features.json
data/activations_gemma/: sae_gemma_l20_interpretations.md  sae_gemma_l20_top_features.json
data/activations_llama/: sae_llama_l19_interpretations.md  sae_llama_l19_top_features.json
data/interventions/: f1_ood_29108.json  f2_26221_ood.json  f2_identity_26221.json  f3_temp_T0.01.json  f3_temp_T0.3.json  (+30 more)
prompts/: abstract_topics.txt  controls.txt  controls_subset.txt  disclaimer_eliciting.txt  identity_probes.txt  intervention_mixed.txt  introspective.txt  introspective_ood.txt  introspective_subset.txt  temperature_test.txt
src/: analyse_disclaimer.py  analyse_k50.py  analyse_pools.py  analyse_steer.py  analyse_wonder.py  bootstrap_ranks.py  build_pools.py  coherence_nll.py  detectors.py  generate.py  geometry.py  interpret.py  logit_shift.py  norm_probe.py  permutation_test.py  plot_comparison.py  plot_comparison_html.py  plot_depth.py  plot_figure1.py  plot_figure2.py  plots.py  random_direction_control.py  regenerate_tables_and_figures.py  sae_features.py  steer.py  sweep_class1.py
(+28 files in other folders)
