[project]
name = "introspective-attractors"
version = "0.1.0"
description = "Mechanistic investigation of introspective attractors in open LLMs"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "sae-lens>=5.0.0",
    "spacy>=3.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.25.0",
    "safetensors>=0.4.5",
    "einops>=0.8.0",
    "matplotlib>=3.10.9",
]

[tool.uv]
package = false
